<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="8dp"
    >
  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
    <Button
        android:id="@+id/main_activity_button_depart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/depart"
        android:textColor="@color/quantum_grey400"
        />
    <Button
        android:id="@+id/main_activity_button_arrivee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/arrivee"
        android:textColor="@color/quantum_grey400"
        />
    <TextView
        android:id="@+id/main_activity_response_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <TextView
        android:id="@+id/main_activity_response_itinerary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary"
        />

  </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
  <!-- Fragments Container -->



  <Button
      android:id="@+id/main_activity_button_itinerary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/itinerary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>



</android.support.constraint.ConstraintLayout>