<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:background="@color/colorAccent"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="@dimen/margin_small"
    card_view:cardCornerRadius="@dimen/margin_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        android:background="@color/colorAccent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_marginRight="5dp"
            android:id="@+id/item_road_list_icon1"
          android:src="@drawable/ic_directions_walk_purple_700_24dp"
            android:layout_marginEnd="5dp"
            />
        <ImageView
            android:id="@+id/item_road_list_arrow1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
        <ImageView
            android:id="@+id/item_road_list_icon2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_tram_purple_700_24dp"
            android:layout_marginEnd="5dp"
            />
        <ImageView
            android:id="@+id/item_road_list_arrow2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
        <ImageView
            android:id="@+id/item_road_list_icon3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_subway_purple_700_24dp"
            android:layout_marginEnd="5dp"
            />
        <ImageView
            android:id="@+id/item_road_list_arrow3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
        <ImageView
            android:id="@+id/item_road_list_icon4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_train_purple_700_24dp"
            android:layout_marginEnd="5dp"
            />
        <ImageView
            android:id="@+id/item_road_list_arrow4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
        <ImageView
            android:id="@+id/item_road_list_icon5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_directions_bus_purple_700_24dp"
            android:layout_marginEnd="5dp"
            />
        <ImageView
            android:id="@+id/item_road_list_arrow5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
        <ImageView
            android:id="@+id/item_road_list_icon6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_directions_walk_purple_700_24dp"
            android:layout_marginEnd="5dp"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="6dp"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_road_list_depart"
            android:text="@string/depart"
            android:textColor="#000"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_road_list_arrive"
            android:text="@string/arrivee"
            android:textColor="#000"
            android:textSize="18sp" />

      </LinearLayout>

      <TextView
          android:id="@+id/item_road_list_time_travel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_0_min"
          android:textColor="#555" />
    </LinearLayout>

</android.support.v7.widget.CardView>